fix skill name align
id trumps class

--- a/content/resources/css/player-positions-evaluations.css
+++ b/content/resources/css/player-positions-evaluations.css
@@ -14,6 +14,6 @@
 #ft-ppeBd-table td, .ft-ppeBd-input {
 	text-align: right;
 }
-td.ft-ppeBd-skill {
+#ft-ppeBd-table .ft-ppeBd-skill {
 	text-align: left;
 }
